integracion de recepcion y envio de mensajes
