# docs/swagger.json
@@ -809,6 +809,64 @@
                 }
             }
         },
+        "/create-and-send-mensaje": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Crea un nuevo registro de Mensaje con los datos proporcionados y lo envía a un webhook",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "mensaje"
+                ],
+                "summary": "Crea un nuevo registro de Mensaje y lo envía a un webhook",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Mensaje",
+                        "name": "mensaje",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.createAndSendMensajeInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Mensaje"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/direcciones": {
             "post": {
                 "consumes": [
@@ -4778,6 +4836,33 @@
                 }
             }
         },
+        "controllers.createAndSendMensajeInput": {
+            "type": "object",
+            "required": [
+                "adi",
+                "descripcion",
+                "redi",
+                "tie",
+                "zodi"
+            ],
+            "properties": {
+                "adi": {
+                    "type": "string"
+                },
+                "descripcion": {
+                    "type": "string"
+                },
+                "redi": {
+                    "type": "string"
+                },
+                "tie": {
+                    "type": "string"
+                },
+                "zodi": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Caso": {
             "type": "object",
             "properties": {
@@ -4942,6 +5027,9 @@
                     "type": "string"
                 },
                 "tie": {
+                    "type": "string"
+                },
+                "u_telegran": {
                     "type": "string"
                 },
                 "zodi": {
@@ -5250,6 +5338,9 @@
                     }
                 },
                 "tie": {
+                    "type": "string"
+                },
+                "tipo": {
                     "type": "string"
                 },
                 "updated_at": {
